force-app/main/default/objects/Sales_Compensation_Notification__c/Sales_Compensation_Notification__c.object-meta.xml
<CustomObject>
    <description>Sales Compensation</description>
    <label>Sales Compensation Notification</label>
    <nameField>
        <label>Sales Compensation Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Compensation Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>