force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New NSC SCP Associate</fullName>
            </value>
            <value>
                <fullName>New SCP Associate</fullName>
            </value>
            <value>
                <fullName>Role Changed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>