force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Stores sales persons manager name</description>
    <label>Manager Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>