force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Manager_QuicklookID__c.field-meta.xml
<CustomField>
    <fullName>Manager_QuicklookID__c</fullName>
    <label>Manager QuicklookID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>