force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Notified_On__c.field-meta.xml
<CustomField>
    <fullName>Notified_On__c</fullName>
    <description>Date/Time will be stored for Notifications sent.</description>
    <label>Notified On</label>
    <type>DateTime</type>
</CustomField>