force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Previous_ARCS_Job_Family__c.field-meta.xml
<CustomField>
    <fullName>Previous_ARCS_Job_Family__c</fullName>
    <label>Previous ARCS Job Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>