force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Previous_Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Previous_Job_Code__c</fullName>
    <label>Previous Job Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>