force-app/main/default/objects/Sales_Compensation_Notification__c/fields/QuicklookId_Action__c.field-meta.xml
<CustomField>
    <fullName>QuicklookId_Action__c</fullName>
    <description>Quick look Id and job code make a unique key which is used for data upsert from interface.</description>
    <externalId>true</externalId>
    <label>QuicklookId Action</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>