force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Role_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_Change_Date__c</fullName>
    <label>Role Change Date</label>
    <type>Date</type>
</CustomField>