force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Sales Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>