force-app/main/default/objects/Sales_Compensation_Notification__c/fields/Sales_Person_Quicklook_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Quicklook_ID__c</fullName>
    <label>Sales Person Quicklook ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>